--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
-NEXT_PUBLIC_BASE_URL = http://localhost:3001
+NEXT_PUBLIC_BASE_URL = http://localhost:3000
 
 NEXT_PUBLIC_TEST_API = /user
+
+NEXT_PUBLIC_CATEGORY_API = /category
