added article api

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-NEXT_PUBLIC_BASE_URL = http://localhost:3000
+NEXT_PUBLIC_BASE_URL = http://localhost:3001
 
 NEXT_PUBLIC_TEST_API = /user
+NEXT_PUBLIC_CLOUDINARY_URL = https://res.cloudinary.com/diw4r4lbl/
 
 NEXT_PUBLIC_CATEGORY_API = /category
+NEXT_PUBLIC_ACTIVE_ARTICLES_API = /article/active
